--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,21 @@
     <string name="invalid_amount">Invalid amount</string>
     <string name="transaction_saved">Transaction saved successfully</string>
     <string name="add_transaction_fragment_label">Add Transaction</string>
+    <string name="date">Date</string>
+
+    <string name="amount">Amount</string>
+    <string name="note">Note</string>
+    <string name="save">Save</string>
+
+
+
+    <string name="select_category">Select a category</string>
+    <string name="select_income_category">Select income category</string>
+    <string name="select_expense_category">Select expense category</string>
+    <string name="enter_category">Enter Category</string>
+    <string name="category">Category</string>
+    <string name="income_category">Income Category</string>
+    <string name="expense_category">Expense Category</string>
+    <string name="selected_category">Selected category: %s</string>
+
 </resources>
